--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   icons_launcher: ^1.1.7
   splash_screen_view: ^3.0.0
+  provider: ^6.0.3
 
 splash_screen_view:
   color: "#66DEA4"
