--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   icons_launcher: ^1.1.7
   splash_screen_view: ^3.0.0
   provider: ^6.0.3
+  intl: ^0.17.0
 
 splash_screen_view:
   color: "#66DEA4"
